<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".LoginFragment">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/title_image"
        android:src="@drawable/d20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title_image"
        android:scaleType="fitCenter" />
    <Button
        android:id="@+id/sign_in_google"
        android:text="@string/google_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"/>
    <Button
        android:id="@+id/sign_in_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_sign_in"
        android:padding="25dp"/>

</LinearLayout>